@@ -61,6 +61,7 @@ PWOBJS = \
 ../PW/d_matrix.o \
 ../PW/dndepsilon.o \
 ../PW/dndtau.o \
+../PW/dndtau_of_k.o \
 ../PW/dprojdepsilon.o \
 ../PW/dprojdtau.o \
 ../PW/dqvan2.o \
